--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -37,6 +37,7 @@
   flex-shrink: 0;
   background: linear-gradient(93deg, $blueQR -14.26%, $purpleQR 84.41%);
   box-shadow: -1px 23px 50px 0px rgba(132, 130, 231, 0.16);
+  filter: drop-shadow(0 0 1em #64cad875);
 
   &:hover {
     filter: drop-shadow(0 0 1em #64cad875);
@@ -45,14 +46,6 @@
 }
 
 @mixin flexCol {
-  display: flex;
-  flex-direction: column;
-  gap: 5rem;
-  align-items: center;
-  text-align: center;
-}
-
-@mixin flexCol2 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -67,7 +60,7 @@
 
 @mixin wave {
   position: absolute;
-  width: 100%;
+  width: 105vw;
   top: -5rem;
 }
 
