--- a/src/styles/base/_globales.scss
+++ b/src/styles/base/_globales.scss
@@ -9,6 +9,15 @@
 
 html {
   font-size: 62.5%;
+
+  &::-webkit-scrollbar {
+    background: $background;
+    width: 1rem;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: linear-gradient(93deg, $blueQR 10%, $purpleQR 84.41%);
+    border-radius: 2rem;
+  }
 }
 
 body {
@@ -16,6 +25,11 @@ body {
   min-width: 320px;
   min-height: 100vh;
   font-family: $font-family;
+  overflow-x: hidden;
+}
+
+#root {
+  overflow-x: hidden;
 }
 
 .container {
@@ -36,7 +50,7 @@ h3 {
 h2 {
   font-size: 2.8rem;
 
-  @include m.tablet{
+  @include m.tablet {
     font-size: 4.8rem;
   }
 }
@@ -51,11 +65,11 @@ p {
   font-weight: 400;
   line-height: 24.64px;
 
-  @include m.tablet{
+  @include m.tablet {
     line-height: 27.72px;
     font-size: 1.8rem;
   }
-  
+
   @include m.desktop {
     line-height: 30.8px;
     font-size: 2rem;
@@ -64,7 +78,7 @@ p {
 
 button {
   flex-shrink: 0;
-  border-radius: 20px;
+  border-radius: 50px;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 600;
@@ -79,5 +93,4 @@ button {
   @include m.desktop {
     font-size: 2rem;
   }
-  
 }
