--- a/src/styles/hero/_content.scss
+++ b/src/styles/hero/_content.scss
@@ -14,24 +14,26 @@
 
   &__info {
     z-index: 1;
-    width: 75%;
-    @include m.flexCol2;
-    gap: 3rem;
-    margin: 8rem 0 5rem 0;
+    width: 85%;
+    @include m.flexCol;
+    gap: 1rem;
+    margin: 7rem 0 5rem 0;
 
     &-title {
       font-size: 3rem;
     }
     &-slogan {
-      width: 100%;;
+      width: 100%;
+      margin-bottom: 3rem;
     }
 
     &-btn {
       @include m.btn-gradient;
+      transition: 0.3s;
     }
 
     @include m.tablet {
-      width: 70%;
+      width: 80%;
       &-title {
         font-size: 4.8rem;
       }
@@ -42,8 +44,8 @@
 
     @include m.desktop {
       width: 40%;
-      margin-bottom: 10rem;
-      
+      margin-bottom: 20rem;
+
       &-title {
         text-align: start;
         font-size: 6.4rem;
@@ -55,28 +57,9 @@
 
       &-btn {
         align-self: start;
-        line-height: 30.8px;
         font-size: 2rem;
+        filter: none;
       }
-    }
-  }
-
-  &__icon {
-    position: absolute;
-    z-index: 5;
-    bottom: 22rem;
-    left: 2rem;
-    width: 8rem;
-
-    @include m.tablet {
-      bottom: 27rem;
-      left: 24rem;
-    }
-
-    @include m.desktop {
-      width: auto;
-      top: 5rem;
-      left: 75rem;
     }
   }
 
