--- a/src/styles/hero/_hero.scss
+++ b/src/styles/hero/_hero.scss
@@ -9,6 +9,7 @@
   color: $white;
   padding-bottom: 2rem;
   overflow: hidden;
+  min-height: 100vh;
   
   @include m.desktop {
     background-position: center;
